# awesome-ai

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
Agent/ChatBot/: state_machine.py
Agent/simple/: chatbot_custom_workflow.ipynb  custom_workflow_chatbot.py
RAG/PDF/: main.ipynb
RAG/Simple/: main.py  vector.py
agentic/custom/chatbot/: basic.ipynb  customize_state.ipynb  human_in_loop.ipynb  memory.ipynb  time_traveler.ipynb  tool.ipynb
agentic/prebuilt/: prebuilt_agent.py
agentic/web/streamlit/: README.md
basic/: first-conversation.py
chains/: basic_example.py
chains/RAG/PDF/: main.ipynb
environment/: local.env
prerequisite/: README.md  vscode-debug-python.md
