[project]
name = "awesome-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "docarray>=0.41.0",
    "dotenv>=0.9.9",
    "icecream>=2.1.7",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
]
